Added Two Commands and Changed Config Require
Added server and user commands and changed how config require worked so we can use 'prefix' and 'token' directly.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "prefix": "t!",
-    "token": "NzY3OTk5MTcxNTgzMjc5MTM0.X46E9w.BlV49zUiGryaCbA5x-AcCXaQjqk"
+    "prefix": "t+",
+    "token": "NzY3OTk5MTcxNTgzMjc5MTM0.X46E9w.BlV49zUiGryaCbA5x-AcCXaQjqk",
+    "passcode": "Pineapple"
 }
